@@ -9,6 +9,8 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import static java.util.stream.Collectors.*;
+
 
 public class GettingStarted {
 
@@ -36,10 +38,8 @@ public class GettingStarted {
     @Test
     public void declarativeApproachUsingStreams() throws Exception {
         List<Person> people = MockData.getPeople();
-        List<Person> youngPeople = people.stream()
-                .filter(p -> p.getAge() <= 18)
-                .limit(10)
-                .collect(Collectors.toList());
+        List<Person> youngPeople = people.stream().filter(p -> p.getAge() <= 18).limit(10).toList();
         youngPeople.forEach(System.out::println);
+
     }
 }
